# bel7-cli

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: clap_ext.rs  completions.rs  errors.rs  lib.rs  output.rs  progress.rs  tables.rs  testing.rs  truncate.rs
tests/: clap_ext_tests.rs  completions_tests.rs  errors_tests.rs  output_tests.rs  progress_tests.rs  tables_tests.rs  truncate_tests.rs
